Agregamos Firma y Modificamos palabras

--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
             <button class="magic-btn" onclick="openModal()">ABRIR</button>
         </div>
 
-        <p class="text-msg text-bottom">Gracias por este año</p>
+        <p class="text-msg text-bottom">Gracias por este año <br> Flor 🌸</p>
     </div>
 
     <div class="modal-overlay" id="modal" onclick="closeModal(event)">
         <div class="modal-content">
             <h2 style="color: #FF80AB; margin-top: 0; font-size: 2rem;">✨ Sorpresa ✨</h2>
-            <p class="modal-text">"Que el próximo año brille tanto como estas estrellas."</p>
+            <p class="modal-text">"Que el próximo año brilles tanto como estas estrellas."</p>
             <button class="close-btn" onclick="closeModal(event)">Cerrar</button>
         </div>
     </div>
